# Vault-Monitoring

./: .env.example  .gitignore  .pr-body.md  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md
backend/: Dockerfile  README.md  alembic.ini  dex_contracts.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_all_canonical_schemas_from_s10.py  002_add_continuous_aggregates_and_retention.py  003_profiles_first_user_admin_bootstrap_trigger.py  004_enable_rls_policies.py  005_add_admin_rls_profile_policy.py  006_fix_schema_add_indexes_risk_tables.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/adapters/: __init__.py  aave.py  aave_constants.py  base.py  euler.py  morpho.py  pendle.py  registry.py
backend/app/api/: admin.py  auth.py  positions.py  vaults.py  wallets.py  ws.py
backend/app/models/: __init__.py  admin.py  position.py  position_snapshot.py  price_history.py  profile.py  recommendation.py  risk_score_history.py  transaction_lot.py  vault.py  vault_concentration.py  vault_metrics.py  wallet.py
backend/app/schemas/: __init__.py  adapter.py  admin.py  price.py  wallet.py
backend/app/services/: account_deletion.py  admin.py  auth.py  dex_contracts.py  helius_client.py  hypersync_client.py  multicall.py  notifications.py  prices.py  vault_discovery.py  wallet.py
backend/tests/: conftest.py  test_profiles_bootstrap_trigger.py  test_rls_policies.py
backend/tests/test_api/: test_account_deletion.py  test_admin.py  test_auth.py  test_wallets.py
(+69 files in other folders)
